test-cases/negative/test_088_return_value_type_mismatch.lay
# negative test: return value doesn't match function return type
# expected: type checker should catch this

define function getNumber that takes nothing and returns Number
  return 'not a number'


